Features Section: Looking to reduce the feature-boxes into a singular component to dynamically load the correct icon, other issue is just off-center

--- a/holidays-app/src/components/Home/Home.css
+++ b/holidays-app/src/components/Home/Home.css
@@ -28,3 +28,38 @@
 .banner-description {
   line-height: 1.6;
 }
+
+
+
+
+
+
+
+
+.features-icon-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 5%;
+}
+
+.feature-box {
+  display: flex;
+  justify-content: center;
+}
+
+.feature-body {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 20px;
+}
+
+.feature-title {
+  margin-top: 11px;
+}
+
+.feature-description {
+  margin: 0;
+  width: 80%;
+}
